--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Vcs-Git: https://salsa.debian.org/debian-hamradio-team/direwolf.git
 Homepage: https://github.com/wb2osz/direwolf
 
 Package: direwolf
-Architecture: alpha amd64 arm64 armel armhf i386 mipsel ppc64el sh4 x32
+Architecture: alpha amd64 arm64 armel armhf i386 ia64 mips64el mipsel ppc64el riscv64 sh4 x32
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          adduser
