--- a/debian/control
+++ b/debian/control
@@ -1,24 +1,26 @@
 Source: direwolf
 Maintainer: Debian Hamradio Maintainers <debian-hams@lists.debian.org>
-Uploaders: Iain R. Learmonth <irl@debian.org>
+Uploaders: Christoph Berg <myon@debian.org>
 Section: hamradio
 Priority: optional
-Build-Depends: debhelper-compat (= 12),
+Build-Depends: cmake,
+               debhelper-compat (= 13),
                libasound2-dev,
                libgps-dev,
                libhamlib-dev,
+               libudev-dev [linux-any],
                adduser
-Standards-Version: 4.4.1
+Standards-Version: 4.5.0
 Vcs-Browser: https://salsa.debian.org/debian-hamradio-team/direwolf
 Vcs-Git: https://salsa.debian.org/debian-hamradio-team/direwolf.git
 Homepage: https://github.com/wb2osz/direwolf
 
 Package: direwolf
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 mips64el mipsel ppc64el riscv64 sh4 x32
+Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          adduser
-Suggests: gpsd
+Suggests: gpsd, python3
 Breaks: direwolf-docs (<< 1.1-1)
 Replaces: direwolf-docs (<< 1.1-1)
 Description: Soundcard TNC for APRS
