Restrict again to linux-any. In theory other OSes are supported via liboss4-salsa-dev but that is lacking snd_pcm_recover so don't bother porting for now.

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Vcs-Git: https://salsa.debian.org/debian-hamradio-team/direwolf.git
 Homepage: https://github.com/wb2osz/direwolf
 
 Package: direwolf
-Architecture: any
+Architecture: linux-any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          adduser
